docs: enhance comments and documentation across map-related classes for clarity